# computer-vision

./: pyproject.toml
LeNet5-mnist/: lenet.ipynb
gesture-recognition-mediapipe/: collect_landmarks.py  mediapipe.ipynb  train_model.py
gesture-recognition-mediapipe/Data/: hand_landmarks_data.csv
gesture-recognition-mediapipe/models/: gesture_model.joblib  label_encoder.joblib
image-classification-gemini/: gemini_api.ipynb
image-classification-mobilenetv3/: image_classification.ipynb  mobilenetv3.ipynb
image-segmentation-clipseg-rd64/: clipseg_rd64.ipynb
